# MIT6_837_Assignments

./: .gitignore  CMakeLists.txt
0/: Makefile  ifs.cpp  ifs.h  vectors.h
0/tools/: DeAffMat.py
1/: Makefile  camera.cpp  camera.h  group.cpp  group.h  main.cpp  object3d.h  raytracer.cpp  raytracer.h  scene_parser.cpp  sphere.cpp  sphere.h
2/: camera.h  commandLineArgumentParser.cpp  commandLineArgumentParser.h  group.cpp  main.cpp  matrix.cpp  object3d.h  plane.cpp  plane.h  raytracer.cpp  transform.cpp  transform.h  triangle.cpp  triangle.h
src/0/: ifs.cpp  main.cpp  matrix.h
src/1/: camera.cpp  group.h  matrix.cpp  raytracer.h  sphere.cpp  sphere.h
src/2/: camera.cpp  raytracer.cpp  sphere.cpp  triangle.cpp  triangle.h  vectors.h
src/3/: camera.cpp  camera.h  camera_additions.txt.htm  commandLineArgumentParser.cpp  commandLineArgumentParser.h  glCanvas.cpp  glCanvas.h  light.cpp  main.cpp  material.cpp  material.h  object3d.h  object3d_additions.txt  object3d_additions.txt.htm  plane.cpp  plane.h  raytracer.cpp  raytracer.h  scene_parser.cpp  sphere.cpp  sphere.h  transform.cpp  triangle.cpp  triangle.h
src/4/: camera.cpp  commandLineArgumentParser.cpp  commandLineArgumentParser.h  glCanvas.cpp  glCanvas.h  group.cpp  group.h  hit.h  light.cpp  main.cpp  material.cpp  material.h  matrix.h  plane.cpp  plane.h  rayTree.cpp  rayTree.h  raytracer.cpp  raytracer.h  sphere.cpp  transform.cpp  transform.h  triangle.cpp
src/5/: commandLineArgumentParser.cpp  commandLineArgumentParser.h  glCanvas.cpp  grid.cpp  grid.h  group.cpp  hit.h  main.cpp  material.h  object3d.cpp  object3d.h  plane.cpp  raytracer.cpp  raytracer.h  sphere.cpp  sphere.h  transform.cpp  triangle.cpp  triangle.h  vectors.h
src/6/: boundingbox.cpp  grid.cpp  grid.h  group.h  hsl.h  main.cpp  material.cpp  material.h  object3d.cpp  object3d.h  plane.cpp  plane.h  raytracer.cpp  raytracer.h  raytracing_stats.cpp  sphere.cpp  sphere.h  transform.cpp  transform.h  triangle.cpp  vectors.h
src/7/: boundingbox.h  commandLineArgumentParser.cpp  commandLineArgumentParser.h  film.cpp  filter.cpp  filter.h  grid.cpp  group.cpp  hsl.cpp  main.cpp  material.cpp  material.h  rayTree.cpp  rayTree.h  raytracer.cpp  raytracer.h  sample.cpp  sampler.cpp  sampler.h  sphere.cpp  transform.h  triangle.cpp  triangle.h  vectors.h
src/8/: curve.cpp  curve.h  glCanvas.cpp  matrix.cpp  matrix.h  spline.cpp  spline.h  surface.cpp  surface.h  vectors.h
src/9/: forcefield.cpp  forcefield.h  generator.cpp  generator.h  glCanvas.cpp  integrator.cpp  integrator.h  particle.cpp  system.cpp
